Updated sprites and tiles for lab